--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/target
+/classes
+/checkouts
+profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
@@ -6,9 +10,8 @@ pom.xml.asc
 /classes/
 /target/
 /checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
+/.lein-*
+/.nrepl-port
 .cpcache/
+.hgignore
+.hg/
