--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ script: "lein midje"
 after_success:
 - lein cloverage --codecov
 - bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json
+
+language: clojure
+script: "lein midje"
+after_success:
+- lein cloverage --codecov
+- bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json
