--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 /target
 /classes
 /checkouts
+
 profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
 *.class
+*.DS_Store
+
 /lib/
 /classes/
 /target/
 /checkouts/
 /.lein-*
 /.nrepl-port
+
 .cpcache/
 .hgignore
 .hg/
