--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: clojure
-script: "lein midje"
-after_success:
-- lein cloverage --codecov
-- bash <(curl -s https://codecov.io/bash) -f target/coverage/codecov.json
-
-language: clojure
+services: mongodb
 script: "lein midje"
 after_success:
 - lein cloverage --codecov
